[package]
name = "dmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.90"
bincode = "1.3.3"
hex = "0.4.3"
rand = "0.8.5"
rs_merkle = "1.4.2"
secp256k1 = { version = "0.30.0", features = ["rand", "std"] }
serde = { version = "1.0.210", features = ["derive"] }
sha2 = "0.10.8"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
